--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: #fcdfcf;
+}
+
 button{
     cursor: pointer;
     border: none;
@@ -11,6 +15,10 @@ button{
 
 a {
     text-decoration: none;
+}
+
+ul{
+    list-style: none;
 }
 
 
